--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,24 @@
-# Ignore macOS system files
+# Ignore data files
+data/
+*.json
+
+# Ignore system files
 .DS_Store
+Thumbs.db
 
-# Ignore Python cache files
-__pycache__/
-*.py[cod]
-*.so
-
-# Ignore Jupyter Notebook checkpoints
+# Ignore notebook checkpoints
 .ipynb_checkpoints/
 
-# Ignore virtual environments
+# Ignore Python environments (optional)
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
 env/
 venv/
-.venv/
 
-# Ignore VS Code settings
+glove/
+*.txt
+
+# Ignore Jupyter Notebook files
 .vscode/
-
-# Ignore data files if needed (uncomment to activate)
-# data/
-# *.csv
-# *.tsv
-
-# Ignore model checkpoints or outputs
-*.ckpt
-*.pt
-*.h5
-*.pkl
-*.joblib
-
-# Ignore log files and temp files
-*.log
-*.tmp
-*.bak
